--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "dependencies": {
     "axios": "^1.3.6",
     "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
+    "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.6.1",
+    "sqlite3": "^5.1.6",
     "whatsapp-web.js": "^1.19.5"
   },
   "devDependencies": {
