--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.10.0",
     "react-time-ago": "^7.2.1",
+    "react-toastify": "^9.1.2",
     "socket.io-client": "^4.6.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.3",
