--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node ."
   },
   "dependencies": {
+    "amqplib": "^0.10.3",
     "axios": "^1.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
