--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -4,9 +4,9 @@ name: 🚀 Deploy App...
 on: # master = production
     # Triggers the workflow on push or pull request events but only for the "master" branch
     push:
-        branches: ["masterr"] # master, development, staging
+        branches: ["master"] # master, development, staging
     pull_request:
-        branches: ["masterr"] # master, development, staging
+        branches: ["master"] # master, development, staging
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
