change mysql, add migration, add many endpoint, add partial mention

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,12 @@ DASHBOARD_ROOT=
 
 JWT_SECRET_TOKEN=
 
+# Configuration Database
+DB_TYPE=mysql2
+DB_HOST=
+DB_PORT=3306
+DB_USER=
+DB_PASS=
+DB_NAME=
+
 RABBIT_HOST=
