--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "locate-chrome": "^0.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.4",
+    "node-cron": "^3.0.2",
     "qr-image": "^3.2.0",
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.6.1",
