fix message report on action OK

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -121,6 +121,11 @@ jobs:
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
 
+      - name: Get current date
+        if: success() || failure()
+        run: |
+          echo "{date}={$(date +'%Y-%m-%d')}" >> $GITHUB_STATE
+
       # If there is a success, send a report
       - name: Send success report
         if: success()
@@ -130,7 +135,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data '{
                 "phone_number": "${{ secrets.REPORT_PHONE_NUMBER }}",
-                "message": "${{ env.GITHUB_WORKFLOW }} failed with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\ntime=*${{ formatTime(now(), 'YYYY-MM-DDTHH:mm:ssZ') }}*"
+                "message": "${{ env.GITHUB_WORKFLOW }} failed with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ env.date }}*"
             }'
       # If there is a failure, send a report
       - name: Send failure report
@@ -141,7 +146,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data '{
                 "phone_number": "${{ secrets.REPORT_PHONE_NUMBER }}",
-                "message": "${{ env.GITHUB_WORKFLOW }} failed with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\ntime=*${{ formatTime(now(), 'YYYY-MM-DDTHH:mm:ssZ') }}*"
+                "message": "${{ env.GITHUB_WORKFLOW }} failed with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ env.date }}*"
             }'
 
       # ----------------------------------------------------------------------
