--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -135,7 +135,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data '{
                 "phone_number": "${{ secrets.REPORT_PHONE_NUMBER }}",
-                "message": "${{ env.GITHUB_WORKFLOW }} failed with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ env.date }}*"
+                "message": "${{ GITHUB_WORKFLOW }} deployed with ${{ GITHUB_JOB }}/${{ GITHUB_RUN_NUMBER }}: ${{ GITHUB_JOB_STATUS }}\n#➥ *${{ date }}*"
             }'
       # If there is a failure, send a report
       - name: Send failure report
@@ -146,7 +146,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data '{
                 "phone_number": "${{ secrets.REPORT_PHONE_NUMBER }}",
-                "message": "${{ env.GITHUB_WORKFLOW }} failed with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ env.date }}*"
+                "message": "${{ GITHUB_WORKFLOW }} failed with ${{ GITHUB_JOB }}/${{ GITHUB_RUN_NUMBER }}: ${{ GITHUB_JOB_STATUS }}\n#➥ *${{ date }}*"
             }'
 
       # ----------------------------------------------------------------------
