fix message report on action OK 4

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -11,6 +11,11 @@ on: # master = production
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  SNAPSHOT_VERSION: ${{ format('{0}-SNAPSHOT', github.event.number) }}
+  GITHUB_ISSUE_NUMBER: ${{ github.event.number }}
+  GITHUB_REPO: ${{ github.event.repository.name }}
+
 jobs:
   app-deploy:
     name: 🚚 WhatsApp Notification API - Microservice
@@ -18,16 +23,17 @@ jobs:
     steps:
       - name: Get current date
         run: |
-          echo "start_date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "start_date=$(date +'%Y-%m-%d %H:%M:%s')" >> $GITHUB_OUTPUT
       - name: Send start report
         run: |
+          PAYLOAD="{
+            \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
+            \"message\": \"${{ env.GITHUB_WORKFLOW }} starting with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ steps.version.outputs.start_date }}*\"
+          }"
           curl --insecure --location '${{ secrets.REPORT_TARGET_URL }}' \
             --header 'Content-Type: application/json' \
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
-            --data '{
-                "phone_number": "${{ secrets.REPORT_PHONE_NUMBER }}",
-                "message": "${{ env.GITHUB_WORKFLOW }} starting with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ steps.version.outputs.start_date }}*"
-            }'
+            --data-raw "$PAYLOAD"
 
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
