--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - name: Get current date
         run: |
-          echo "start_date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "start_date=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
       - name: Send start report
         run: |
           curl --insecure --location '${{ secrets.REPORT_TARGET_URL }}' \
@@ -31,7 +31,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"${{ env.GITHUB_WORKFLOW }} starting with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ steps.version.outputs.start_date }}*\"
+              \"message\": \"${{ env.GITHUB_REPO }} starting with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_ISSUE_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ steps.version.outputs.start_date }}*\"
             }"
 
       # ----------------------------------------------------------------------
