testing all value

--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -21,6 +21,20 @@ jobs:
     name: 🚚 WhatsApp Notification API - Microservice
     runs-on: server-dell-jefri
     steps:
+      - name: Dump GitHub context
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
+      - name: Dump job context
+        run: echo '${{ toJSON(job) }}'
+      - name: Dump steps context
+        run: echo '${{ toJSON(steps) }}'
+      - name: Dump runner context
+        run: echo '${{ toJSON(runner) }}'
+      - name: Dump strategy context
+        run: echo '${{ toJSON(strategy) }}'
+      - name: Dump matrix context
+        run: echo '${{ toJSON(matrix) }}'
+
       - name: Get current date
         run: |
           echo "start_date=$(date --rfc-3339=date)" >> ${GITHUB_ENV}
