--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -14,27 +14,19 @@ on: # master = production
 env:
   SNAPSHOT_VERSION: ${{ format('{0}-SNAPSHOT', github.event.number) }}
   GITHUB_ISSUE_NUMBER: ${{ github.event.number }}
+  TZ: Asia/New_York date
 
 jobs:
   app-deploy:
     name: 🚚 WhatsApp Notification API - Microservice
     runs-on: server-dell-jefri
     steps:
-      # - name: Dump GitHub context
-      #   id: github_context_step
-      #   run: echo '${{ toJSON(github) }}'
-      # - name: Dump job context
-      #   run: echo '${{ toJSON(job) }}'
-      # - name: Dump steps context
-      #   run: echo '${{ toJSON(steps) }}'
-      # - name: Dump runner context
-      #   run: echo '${{ toJSON(runner) }}'
-      # - name: Dump strategy context
-      #   run: echo '${{ toJSON(strategy) }}'
-      # - name: Dump matrix context
-      #   run: echo '${{ toJSON(matrix) }}'
+      - name: Set Time Zone
+        uses: szenius/set-timezone@v1.1
+        with:
+          timezoneLinux: "Asia/Jakarta"
 
-      - name: Get current date
+      - name: Get start date
         run: |
           echo "start_date=$(date +"%Y-%m-%d %T")" >> ${GITHUB_ENV}
       - name: Send start report
@@ -159,7 +151,7 @@ jobs:
       - name: Get current date
         if: success() || failure()
         run: |
-          echo "end_date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+          echo "end_date=$(date +"%Y-%m-%d %T")" >> ${GITHUB_ENV}
 
       # If there is a success, send a report
       - name: Send success report
@@ -168,10 +160,10 @@ jobs:
           curl --insecure --location '${{ secrets.REPORT_TARGET_URL }}' \
             --header 'Content-Type: application/json' \
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
-            --data '{
-                "phone_number": "${{ secrets.REPORT_PHONE_NUMBER }}",
-                "message": "${{ env.GITHUB_WORKFLOW }} deployed with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ steps.version.outputs.end_date }}*"
-            }'
+            --data-raw "{
+              \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
+              \"message\": \"*#> REPORTER <#*\nOWNER ➥ *${{ github.repository_owner }}*\nREPO ➥ *${{ github.event.repository.name }}*\nPUSHER ➥ *${{ github.event.pusher.name }}*\nSHA ➥ *${{ github.sha }}*\nSTATUS ➥ *DEPLOYED*\nTIME ➥ *${{ env.start_date }}*\"
+            }"
       # If there is a failure, send a report
       - name: Send failure report
         if: failure()
@@ -179,10 +171,30 @@ jobs:
           curl --insecure --location '${{ secrets.REPORT_TARGET_URL }}' \
             --header 'Content-Type: application/json' \
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
-            --data '{
-                "phone_number": "${{ secrets.REPORT_PHONE_NUMBER }}",
-                "message": "${{ env.GITHUB_WORKFLOW }} failed with ${{ env.GITHUB_JOB }}/${{ env.GITHUB_RUN_NUMBER }}: ${{ env.GITHUB_JOB_STATUS }}\n#➥ *${{ steps.version.outputs.end_date }}*"
-            }'
+            --data-raw "{
+              \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
+              \"message\": \"*#> REPORTER <#*\nOWNER ➥ *${{ github.repository_owner }}*\nREPO ➥ *${{ github.event.repository.name }}*\nPUSHER ➥ *${{ github.event.pusher.name }}*\nSHA ➥ *${{ github.sha }}*\nSTATUS ➥ *FAILURE*\nTIME ➥ *${{ env.start_date }}*\"
+            }"
+
+      - name: Dump GitHub context
+        if: success() || failure()
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
+      - name: Dump job context
+        if: success() || failure()
+        run: echo '${{ toJSON(job) }}'
+      - name: Dump steps context
+        if: success() || failure()
+        run: echo '${{ toJSON(steps) }}'
+      - name: Dump runner context
+        if: success() || failure()
+        run: echo '${{ toJSON(runner) }}'
+      - name: Dump strategy context
+        if: success() || failure()
+        run: echo '${{ toJSON(strategy) }}'
+      - name: Dump matrix context
+        if: success() || failure()
+        run: echo '${{ toJSON(matrix) }}'
 
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
