--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -26,8 +26,9 @@ jobs:
         with:
           timezoneLinux: "Asia/Jakarta"
 
-      - name: Get start date
+      - name: Get start datetime
         run: |
+          TZ=Asia/Jakarta
           echo "start_date=$(date +"%Y-%m-%d %T")" >> ${GITHUB_ENV}
       - name: Send start report
         run: |
@@ -116,6 +117,14 @@ jobs:
           regex: false
           include: ".env"
 
+      - name: F&R - RABBIT_HOST
+        uses: jacobtomlinson/gha-find-replace@v2
+        with:
+          find: "RABBIT_HOST="
+          replace: "RABBIT_HOST=${{ secrets.ENV_RABBIT_HOST }}"
+          regex: false
+          include: ".env.anu"
+
       # ----------------------------------------------------------------------
 
       # - name: F&R - REDIS_USER
@@ -148,9 +157,10 @@ jobs:
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
 
-      - name: Get current date
+      - name: Get end datetime
         if: success() || failure()
         run: |
+          TZ=Asia/Jakarta
           echo "end_date=$(date +"%Y-%m-%d %T")" >> ${GITHUB_ENV}
 
       # If there is a success, send a report
@@ -162,7 +172,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*#> REPORTER <#*\nOWNER ➥ *${{ github.repository_owner }}*\nREPO ➥ *${{ github.event.repository.name }}*\nPUSHER ➥ *${{ github.event.pusher.name }}*\nSHA ➥ *${{ github.sha }}*\nSTATUS ➥ *DEPLOYED*\nTIME ➥ *${{ env.start_date }}*\"
+              \"message\": \"*#> REPORTER <#*\nOWNER ➥ *${{ github.repository_owner }}*\nREPO ➥ *${{ github.event.repository.name }}*\nPUSHER ➥ *${{ github.event.pusher.name }}*\nSHA ➥ *${{ github.sha }}*\nSTATUS ➥ *DEPLOYED*\nTIME ➥ *${{ env.end_date }}*\"
             }"
       # If there is a failure, send a report
       - name: Send failure report
@@ -173,7 +183,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*#> REPORTER <#*\nOWNER ➥ *${{ github.repository_owner }}*\nREPO ➥ *${{ github.event.repository.name }}*\nPUSHER ➥ *${{ github.event.pusher.name }}*\nSHA ➥ *${{ github.sha }}*\nSTATUS ➥ *FAILURE*\nTIME ➥ *${{ env.start_date }}*\"
+              \"message\": \"*#> REPORTER <#*\nOWNER ➥ *${{ github.repository_owner }}*\nREPO ➥ *${{ github.event.repository.name }}*\nPUSHER ➥ *${{ github.event.pusher.name }}*\nSHA ➥ *${{ github.sha }}*\nSTATUS ➥ *FAILURE*\nTIME ➥ *${{ env.end_date }}*\"
             }"
 
       - name: Dump GitHub context
