--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -185,25 +185,36 @@ jobs:
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
               \"message\": \"*#> REPORTER <#*\nOWNER ➥ *${{ github.repository_owner }}*\nREPO ➥ *${{ github.event.repository.name }}*\nPUSHER ➥ *${{ github.event.pusher.name }}*\nSHA ➥ *${{ github.sha }}*\nSTATUS ➥ *FAILURE*\nTIME ➥ *${{ env.end_date }}*\"
             }"
+      # If there is a cancelled, send a report
+      - name: Send cancelled report
+        if: cancelled()
+        run: |
+          curl --insecure --location '${{ secrets.REPORT_TARGET_URL }}' \
+            --header 'Content-Type: application/json' \
+            --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
+            --data-raw "{
+              \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
+              \"message\": \"*#> REPORTER <#*\nOWNER ➥ *${{ github.repository_owner }}*\nREPO ➥ *${{ github.event.repository.name }}*\nPUSHER ➥ *${{ github.event.pusher.name }}*\nSHA ➥ *${{ github.sha }}*\nSTATUS ➥ *CANCEL*\nTIME ➥ *${{ env.end_date }}*\"
+            }"
 
       - name: Dump GitHub context
-        if: success() || failure()
+        if: success() || failure() || cancelled()
         id: github_context_step
         run: echo '${{ toJSON(github) }}'
       - name: Dump job context
-        if: success() || failure()
+        if: success() || failure() || cancelled()
         run: echo '${{ toJSON(job) }}'
       - name: Dump steps context
-        if: success() || failure()
+        if: success() || failure() || cancelled()
         run: echo '${{ toJSON(steps) }}'
       - name: Dump runner context
-        if: success() || failure()
+        if: success() || failure() || cancelled()
         run: echo '${{ toJSON(runner) }}'
       - name: Dump strategy context
-        if: success() || failure()
+        if: success() || failure() || cancelled()
         run: echo '${{ toJSON(strategy) }}'
       - name: Dump matrix context
-        if: success() || failure()
+        if: success() || failure() || cancelled()
         run: echo '${{ toJSON(matrix) }}'
 
       # ----------------------------------------------------------------------
