--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -34,7 +34,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*➥ REPORTER*\n#OWNER: *${{ github.repository_owner }}*\n#REPO: *${{ github.event.repository.name }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *STARING*\n#TIME: *${{ env.start_date }}*\"
+              \"message\": \"*➥ REPORTER*\n#OWNER: *${{ github.repository_owner }}*\n#REPO: *${{ github.event.repository.name }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *STARING* 🛫\n#TIME: *${{ env.start_date }}*\"
             }"
 
       # ----------------------------------------------------------------------
@@ -136,9 +136,9 @@ jobs:
       # ----------------------------------------------------------------------
       # ----------------------------------------------------------------------
 
-      - name: Test Error
-        run: |
-          anu
+      # - name: Test Error
+      #   run: |
+      #     anu
 
       - name: 📡 Docker Compose...
         run: |
@@ -154,7 +154,6 @@ jobs:
         if: success() || failure()
         run: |
           echo "end_date=$(date +"%Y-%m-%d %T")" >> ${GITHUB_ENV}
-          echo "::error::Filename doesn't match possible files"
 
       # If there is a success, send a report
       - name: Send success report
@@ -165,7 +164,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*➥ REPORTER*\n#OWNER: *${{ github.repository_owner }}*\n#REPO: *${{ github.event.repository.name }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *DEPLOYED*\n#TIME: *${{ env.start_date }}*\"
+              \"message\": \"*➥ REPORTER*\n#OWNER: *${{ github.repository_owner }}*\n#REPO: *${{ github.event.repository.name }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *DEPLOYED* ✈️✅\n#TIME: *${{ env.start_date }}*\"
             }"
       # If there is a failure, send a report
       - name: Send failure report
@@ -176,7 +175,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*➥ REPORTER*\n#OWNER: *${{ github.repository_owner }}*\n#REPO: *${{ github.event.repository.name }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *FAILURE*\n#TIME: *${{ env.start_date }}*\"
+              \"message\": \"*➥ REPORTER*\n#OWNER: *${{ github.repository_owner }}*\n#REPO: *${{ github.event.repository.name }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *FAILURE* ❌\n#TIME: *${{ env.start_date }}*\"
             }"
       # If there is a cancelled, send a report
       - name: Send cancelled report
@@ -187,8 +186,12 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*➥ REPORTER*\n#OWNER: *${{ github.repository_owner }}*\n#REPO: *${{ github.event.repository.name }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *CANCEL*\n#TIME: *${{ env.start_date }}*\"
+              \"message\": \"*➥ REPORTER*\n#OWNER: *${{ github.repository_owner }}*\n#REPO: *${{ github.event.repository.name }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *CANCEL* ⛔\n#TIME: *${{ env.start_date }}*\"
             }"
+
+      # ----------------------------------------------------------------------
+      # ----------------------------------------------------------------------
+      # ----------------------------------------------------------------------
 
       - name: Dump GitHub context
         if: success() || failure() || cancelled()
