--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
-    "locate-chrome": "^0.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.4",
     "node-cron": "^3.0.2",
@@ -27,6 +26,7 @@
     "qrcode-terminal": "^0.12.0",
     "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
+    "tesseract.js": "^4.0.3",
     "whatsapp-web.js": "^1.19.5"
   },
   "devDependencies": {
