--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -14,6 +14,7 @@ on: # master = production
 env:
   SNAPSHOT_VERSION: ${{ format('{0}-SNAPSHOT', github.event.number) }}
   GITHUB_ISSUE_NUMBER: ${{ github.event.number }}
+  TEMPLATE_INFO: "*➥ REPORTER (${{ github.run_number }})*\n\n#GIT INFO...\nREPO: *${{ github.event.repository.name }}*\nBRANCH: *${{ github.ref_name }}*\n\n#USER...\nOWNER: *${{ github.repository_owner }}*\nPUSHER: *${{ github.event.pusher.name }}*\n\n#SERVER...\nRUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n"
 
 jobs:
   app-deploy:
@@ -34,7 +35,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*➥ REPORTER*\n#REPO: *${{ github.event.repository.name }}*\n#BRANCH: *${{ github.ref_name }}*\n#OWNER: *${{ github.repository_owner }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *STARING* 🛫📡\n#TIME: *${{ env.start_date }}*\"
+              \"message\": \"${{ env.TEMPLATE_INFO }}STATUS: *STARING* 🛫📡\nTIME: *${{ env.start_date }}*\"
             }"
 
       # ----------------------------------------------------------------------
@@ -164,7 +165,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*➥ REPORTER*\n#REPO: *${{ github.event.repository.name }}*\n#BRANCH: *${{ github.ref_name }}*\n#OWNER: *${{ github.repository_owner }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *DEPLOYED* ✈️✅\n#TIME: *${{ env.end_date }}*\"
+              \"message\": \"${{ env.TEMPLATE_INFO }}STATUS: *DEPLOYED* ✈️✅\nTIME: *${{ env.end_date }}*\"
             }"
       # If there is a failure, send a report
       - name: Send failure report
@@ -175,7 +176,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*➥ REPORTER*\n#REPO: *${{ github.event.repository.name }}*\n#BRANCH: *${{ github.ref_name }}*\n#OWNER: *${{ github.repository_owner }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *FAILURE* 🛬❌\n#TIME: *${{ env.end_date }}*\"
+              \"message\": \"${{ env.TEMPLATE_INFO }}STATUS: *FAILURE* 🛬❌\nTIME: *${{ env.end_date }}*\"
             }"
       # If there is a cancelled, send a report
       - name: Send cancelled report
@@ -186,7 +187,7 @@ jobs:
             --header 'Authorization: Bearer ${{ secrets.REPORT_BEARER_TOKEN }}' \
             --data-raw "{
               \"phone_number\": \"${{ secrets.REPORT_PHONE_NUMBER }}\",
-              \"message\": \"*➥ REPORTER*\n#REPO: *${{ github.event.repository.name }}*\n#BRANCH: *${{ github.ref_name }}*\n#OWNER: *${{ github.repository_owner }}*\n#PUSHER: *${{ github.event.pusher.name }}*\n#RUNNER: *${{ runner.name }} (${{ runner.os }} ${{ runner.arch }})*\n#STATUS: *CANCEL* 🛬⛔\n#TIME: *${{ env.end_date }}*\"
+              \"message\": \"${{ env.TEMPLATE_INFO }}STATUS: *CANCEL* 🛬⛔\nTIME: *${{ env.end_date }}*\"
             }"
 
       # ----------------------------------------------------------------------
